assets/styles.css
:root {
  --accent: #2d9cdb;
  --grey: #b5b5b5;
  --major-accent: #f72585;
  --major-accent-2: #fc8181;
  --byzantine: #b5179eff;
  --purple: #7209b7ff;
  --purple-2: #560badff;
  --trypan-blue: #480ca8;
  --trypan-blue-2: #3a0ca3ff;
  --persian-blue: #3f37c9ff;
  --ultramarine-blue: #4361eeff;
  --dodger-blue: #4895efff;
  --vivid-sky-blue: #4cc9f0ff;
  --strong-gradient: #0061ff;
  --strong-gradient-2: #60efff;
}

* {
  box-sizing: border-box;
}

html {
  font-size: 100%;
  scroll-behavior: smooth;
  background-color: black;
}

body {
  font-family: "PT Sans", Roboto, sans-serif;
  line-height: 1.65;
  color: #e6e6e6;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  margin: 0;
}

li {
  text-decoration: none !important;
}

img {
  max-width: 100%;
}

img[width] {
  width: auto;
  /* Defer to max-width */
}

img[width][height] {
  height: auto;
  /* Preserve aspect ratio */
}

#disqus_thread {
  width: 50%;
  margin: auto;
}

@media (min-width: 601px) {
  .header {
    position: fixed;
    width: 100%;
    overflow: hidden;
    top: 0;
  }

  .menu {
    display: flex;
    background: linear-gradient(to right, var(--dodger-blue), var(--trypan-blue-2));
    border-top: 3px solid var(--major-accent);
    justify-content: flex-end;
    padding-right: 10%;
    align-items: center;
    margin-top: 0;
    text-decoration: none;
    list-style-type: none;
    height: 50px;
  }

  .flex-container {
    display: flex;
  }

  .menu :not(:hover):not(:focus) {
    color: currentColor;
    text-decoration: none !important;
    list-style-type: none;
  }

  .header li {
    text-decoration: none;
  }

  .menu a {
    margin: 0 12px;
    font-size: 1.25em;
  }

  #page-title {
    position: fixed;
    justify-content: flex-start;
    margin-right: 65%;
    align-self: center;
    padding-top: 0 !important;
    margin-top: -1.95rem;
    color: var(--major-accent-2);
  }
}
main {
  flex-grow: 1;
  /* background-color: rgba(0, 0, 0, 0.25); */
  max-width: 70ch;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  margin-top: 65px;
}

main > h1,
h2,
h3,
h4,
h5,
article,
p {
  padding-right: 1rem;
  padding-left: 1rem;
}

hr {
  margin-left: 2em;
  margin-right: 2em;
  background: linear-gradient(to right, var(--major-accent), var(--byzantine), var(--purple));
  height: 5px;
  border: 0;
}

.page-footer {
  text-align: center;
  margin-bottom: 8px;
}

a[href] {
  color: var(--major-accent);
}

a[href]:hover {
  text-decoration: none;
}

a[href]:focus {
  outline: 2px solid var(--major-accent);
  outline-offset: 4px;
}

.footnotes {
  font-size: 0.8em;
}

/* Typography */
p {
  margin-bottom: 1.15rem;
  font-size: 1.1rem;
}

h1,
h2,
h3,
h4,
h5 {
  margin: 2.75rem 0 1.05rem;
  font-weight: 400;
  line-height: 1.15;
}

h1 {
  font-size: 2em;
}

h2 {
  font-size: 1.8em;
}

h3 {
  font-size: 1.563em;
}

h4 {
  font-size: 1.563em;
}

h5,
.larger {
  font-size: 1.25em;
}

small {
  font-size: 0.8em;
}

/* backlinks */
.backlinks-title {
  margin-bottom: 0;
}

.backlinks-container {
  margin-top: 0;
}

.backlinks-default {
  margin-top: 0;
  margin-left: 16px;
  color: black;
}

.backlink__preview {
  display: none;
  position: absolute;
  bottom: 8px;
  left: 100%;
  background-color: #fff;
  border-radius: 4px;
  padding: 4px;
  box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.25);
  width: 348px;
  max-height: 148px;
  overflow: hidden;
}

.backlink__preview::after {
  content: "";
  position: absolute;
  bottom: 0;
  background: linear-gradient(transparent, white);
  width: 100%;
  height: 24px;
  color: black;
}

.backlink__preview h1 {
  padding-left: 1rem;
  font-size: 1.2rem;
  margin-top: 8px;
  font-weight: bold;
  color: black;
}

.backlink {
  width: fit-content;
  position: relative;
  color: black;
}

.backlink:hover {
  padding-right: 4px;
  /* Allow mouse to travel between link and modal */
}

.backlink:hover .backlink__preview {
  display: block;
}

@media (max-width: 600px) {
  .window {
    position: relative;
    display: block;
    box-shadow: 0 0 65px 15px rgba(0, 0, 0, 0.2);
    overflow: hidden;
    border-radius: 3px;
  }
  .window .header {
    position: absolute;
    display: block;
    top: 0;
    left: 0;
    height: 50px;
    width: 100%;
    background: var(--byzantine);
    overflow: hidden;
    transition: all 0.5s ease-out, background 1s ease-out;
    transition-delay: 0.2s;
    z-index: 1;
  }
  .window .header .burger-container {
    position: relative;
    display: inline-block;
    height: 50px;
    width: 50px;
    cursor: pointer;
    transform: rotate(0deg);
    transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
    user-select: none;
    -webkit-tap-highlight-color: transparent;
  }
  .window .header .burger-container #burger {
    width: 18px;
    height: 8px;
    position: relative;
    display: block;
    margin: -4px auto 0;
    top: 50%;
  }
  .window .header .burger-container #burger .bar {
    width: 100%;
    height: 1px;
    display: block;
    position: relative;
    background: #fff;
    transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
    transition-delay: 0s;
  }
  .window .header .burger-container #burger .bar.topBar {
    transform: translateY(0px) rotate(0deg);
  }
  .window .header .burger-container #burger .bar.btmBar {
    transform: translateY(6px) rotate(0deg);
  }
  .window .header .icon {
    display: inline-block;
    position: absolute;
    height: 100%;
    line-height: 50px;
    width: 50px;
    height: 50px;
    text-align: center;
    color: #fff;
    font-size: 22px;
    left: 50%;
    transform: translateX(-50%);
  }
  .window .header .icon.icon-bag {
    right: 0;
    top: 0;
    left: auto;
    transform: translateX(0px);
    transition: transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
    transition-delay: 0.65s;
  }
  .window .header ul.menu {
    position: relative;
    display: block;
    padding: 0px 48px 0;
    list-style: none;
  }
  .window .header ul.menu li.menu-item {
    border-bottom: 1px solid #333;
    margin-top: 5px;
    transform: scale(1.15) translateY(-30px);
    opacity: 0;
    transition: transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99), opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99);
  }
  .window .header ul.menu li.menu-item:nth-child(1) {
    transition-delay: 0.49s;
  }
  .window .header ul.menu li.menu-item:nth-child(2) {
    transition-delay: 0.42s;
  }
  .window .header ul.menu li.menu-item:nth-child(3) {
    transition-delay: 0.35s;
  }
  .window .header ul.menu li.menu-item:nth-child(4) {
    transition-delay: 0.28s;
  }
  .window .header ul.menu li.menu-item:nth-child(5) {
    transition-delay: 0.21s;
  }
  .window .header ul.menu li.menu-item a {
    display: block;
    position: relative;
    color: #fff;
    font-family: Roboto;
    font-weight: 100;
    text-decoration: none;
    font-size: 22px;
    line-height: 2.35;
    font-weight: 200;
    width: 100%;
  }
  .window .header.menu-opened {
    height: 100%;
    background-color: #000;
    transition: all 0.3s ease-in, background 0.5s ease-in;
    transition-delay: 0.25s;
  }
  .window .header.menu-opened .burger-container {
    transform: rotate(90deg);
  }
  .window .header.menu-opened .burger-container #burger .bar {
    transition: all 0.4s cubic-bezier(0.4, 0.01, 0.165, 0.99);
    transition-delay: 0.2s;
  }
  .window .header.menu-opened .burger-container #burger .bar.topBar {
    transform: translateY(4px) rotate(45deg);
  }
  .window .header.menu-opened .burger-container #burger .bar.btmBar {
    transform: translateY(3px) rotate(-45deg);
  }
  .window .header.menu-opened ul.menu li.menu-item {
    transform: scale(1) translateY(0px);
    opacity: 1;
  }
  .window .header.menu-opened ul.menu li.menu-item:nth-child(1) {
    transition-delay: 0.27s;
  }
  .window .header.menu-opened ul.menu li.menu-item:nth-child(2) {
    transition-delay: 0.34s;
  }
  .window .header.menu-opened ul.menu li.menu-item:nth-child(3) {
    transition-delay: 0.41s;
  }
  .window .header.menu-opened ul.menu li.menu-item:nth-child(4) {
    transition-delay: 0.48s;
  }
  .window .header.menu-opened ul.menu li.menu-item:nth-child(5) {
    transition-delay: 0.55s;
  }
  .window .header.menu-opened .icon.icon-bag {
    transform: translateX(75px);
    transition-delay: 0.3s;
  }
  .window .content {
    font-family: Roboto;
    padding: 67px 4% 0;
    text-align: justify;
    overflow: scroll;
    max-height: 100%;
  }
  .window .content::-webkit-scrollbar {
    display: none;
  }
  .window .content h2 {
    margin-bottom: 0px;
    letter-spacing: 1px;
  }
  .window .content img {
    width: 95%;
    position: relative;
    display: block;
    margin: 75px auto 75px;
  }
  .window .content img:nth-of-type(2) {
    margin: 75px auto;
  }
}
@media (max-width: 600px) and (max-width: 600px) {
  .window {
    width: 100%;
    height: 100vh;
    margin: 0;
    border-radius: 0px;
  }
  .window .header {
    position: fixed;
  }
}
/**
 * atom-dark theme for `prism.js`
 * Based on Atom's `atom-dark` theme: https://github.com/atom/atom-dark-syntax
 * @author Joe Gibson (@gibsjose)
 */
code[class*=language-],
pre[class*=language-] {
  color: #c5c8c6;
  text-shadow: 0 1px rgba(0, 0, 0, 0.3);
  font-family: Inconsolata, Monaco, Consolas, "Courier New", Courier, monospace;
  direction: ltr;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  line-height: 1.5;
  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
}

/* Code blocks */
pre[class*=language-] {
  padding: 1em;
  margin: 0.5em 0;
  border-radius: 0.3em;
}

:not(pre) > code[class*=language-],
pre[class*=language-] {
  background: #1d1f21;
}

/* Inline code */
:not(pre) > code[class*=language-] {
  padding: 0.1em;
  border-radius: 0.3em;
}

.token.comment,
.token.prolog,
.token.doctype,
.token.cdata {
  color: #7c7c7c;
}

.token.punctuation {
  color: #c5c8c6;
}

.namespace {
  opacity: 0.7;
}

.token.property,
.token.keyword,
.token.tag {
  color: #96cbfe;
}

.token.class-name {
  color: #ffffb6;
  text-decoration: underline;
}

.token.boolean,
.token.constant {
  color: #99cc99;
}

.token.symbol,
.token.deleted {
  color: #f92672;
}

.token.number {
  color: #ff73fd;
}

.token.selector,
.token.attr-name,
.token.string,
.token.char,
.token.builtin,
.token.inserted {
  color: #a8ff60;
}

.token.variable {
  color: #c6c5fe;
}

.token.operator {
  color: #ededed;
}

.token.entity {
  color: #ffffb6;
  cursor: help;
}

.token.url {
  color: #96cbfe;
}

.language-css .token.string,
.style .token.string {
  color: #87c38a;
}

.token.atrule,
.token.attr-value {
  color: #f9ee98;
}

.token.function {
  color: #dad085;
}

.token.regex {
  color: #e9c062;
}

.token.important {
  color: #fd971f;
}

.token.important,
.token.bold {
  font-weight: bold;
}

.token.italic {
  font-style: italic;
}

.pagenav > a {
  color: white;
}

main > article {
  border: 1px dashed var(--vivid-sky-blue);
  padding-bottom: 2rem;
  margin-bottom: 2rem;
  border-radius: 0.5rem;
}

.page-title {
  font-size: 1.5rem;
}

/*# sourceMappingURL=styles.css.map */

